--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "Mathieu24"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2024"
 
 [dependencies]
 eframe = "0.32.2"
 egui_dnd = "0.13.0"
 env_logger = "0.11.8"
+i_overlay = "4.0.2"
+i_triangle = "0.36.3"
